# TXcool-Prediction-Markets-and-Settlement

./: .gitignore  README.md  SETUP.md  build-and-deploy.sh  fix-borsh-2.sh  fix-borsh.sh  package-lock.json  package.json  tsconfig.json
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/fixtures/: route.ts
frontend/src/app/api/odds/[fixtureId]/: route.ts
frontend/src/app/api/stream/: route.ts
frontend/src/app/api/validate/: route.ts
frontend/src/app/demo/: page.tsx
frontend/src/app/match/[fixtureId]/: page.tsx
frontend/src/app/receipt/[txSig]/: page.tsx
frontend/src/app/txline-feedback/: page.tsx
frontend/src/components/: BetModal.tsx  ComplianceNotice.tsx  DevnetFaucet.tsx  KeeperPanel.tsx  LiquidityPanel.tsx  LiveEventLog.tsx  LiveFeedPanel.tsx  MarketLifecycleTimeline.tsx  MatchCard.tsx  Navbar.tsx  OddsBar.tsx  ProofVisualizer.tsx  SettlementPanel.tsx  TechnicalPanel.tsx
frontend/src/components/providers/: WalletProvider.tsx
frontend/src/hooks/: useGoallineProgram.ts
frontend/src/lib/: goalline-idl.ts
goalline-program/: Anchor.toml  Cargo.toml  generate_idl.js
goalline-program/programs/goalline-program/: Cargo.toml
goalline-program/programs/goalline-program/src/: lib.rs  txline_types.rs
goalline-program/tests/: goalline-program.ts
goalline-program/toml_datetime_patch/: Cargo.toml
idl/: txoracle-devnet.json
scripts/: activate-txline.ts  test-stream.ts
